# auto-researchtrading

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  TWITTER_THREAD.md  backtest_1m.py  backtest_interval.py  constants.py  export_milestones.py  generate_charts.py  prepare.py  program.md  pyproject.toml  pyrightconfig.json  railway.cron.toml  railway.monitor.toml  railway.toml  results.md  run_benchmarks.py  strategy.py  strategy_types.py  strategy_utils.py  symbol_utils.py  trading_algo.ipynb  tune_15m.py
backtest_data/15m_candles/: BTC_15m.parquet  SOL_15m.parquet  XRP_15m.parquet
backtest_data/1m_candles/: BTC_1m.csv  ETH_1m.parquet  README.md  XRP_1m.csv  XRP_1m.parquet
backtest_data/1m_candles_oos/: BTC_1m.parquet  ETH_1m.parquet  XRP_1m.parquet
backtest_data/5m_candles/: BTC_5m.parquet  ETH_5m.parquet  XRP_5m.parquet
benchmarks/: avellaneda_mm.py  funding_arb.py  mean_reversion.py  momentum_breakout.py  regime_mm.py
data_pipeline/: auto_tune_1h.py  common.py  daily_tune.py  pool.py  sliding_window_tune.py
data_pipeline/backtest/: backtest_interval.py  tune_15m.py  tune_1h.py
live_trading_bot/: .env.example  Makefile  RUN.md  bot.py  kill_switch.py  pnl.py  requirements.txt  results.md  test_reconcile.py
scripts/: _env.py  backfill_results.py  backtest_recent.py  daily_autoresearch.sh  download_daily_data.py  monitor_divergence.py  promote_best.py  save_to_db.py
strategies/: __init__.py  strategy_15m.py  strategy_1m.py  strategy_5m.py
tuning_results/: sliding_window_20260329_233149.json  tune_15m_20260330_003753.json
(+96 files in other folders)
